Fixed the User registration and login api integration
