# server/types/types.ts
@@ -230,7 +230,7 @@ export interface TagCountResponse {
  */
 export interface IUserModel extends mongoose.Model<IUserDocument> {
   registerUser(user: IUser): Promise<IUser>;
-  loginUser(email: string, password: string): Promise<Boolean>;
+  loginUser(email: string, password: string): Promise<IUser>;
 }
 
 /**
