# server/utilities/formatUtils.ts
@@ -1,4 +1,4 @@
-import { IAnswerDocument, IAnswer, IQuestionDocument, IQuestion, IUserProfile, IUserProfileDocument, IUser } from '../types/types';
+import { IAnswerDocument, IAnswer, IQuestionDocument, IQuestion, IUserProfile, IUserProfileDocument, IUser, IUserDocument } from '../types/types';
 import mongoose from 'mongoose';
 
 /**
@@ -87,5 +87,21 @@ export function convertToIUserProfile(
         website: profile.website || "",
         twitter: profile.twitter || "",
         github: profile.github || "",
+    };
+}
+
+/**
+ * Converts the _id field in a User document to a string.
+ * This is useful when preparing the user data for API responses.
+ *
+ * @param {IUserDocument} user - The Mongoose user document.
+ * @returns {IUser} - The converted user object with _id as a string.
+ */
+export function convertToIUser(user: IUserDocument): IUser {
+    return {
+        _id: user._id.toString(),
+        email: user.email,
+        displayName: user.displayName,
+        password: user.password,
     };
 }
